<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amar.umby_konversisuhu.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelInput"
        android:id="@+id/label_input"
        android:textStyle="normal|bold"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/txtInput"
        android:ems="10"
        android:id="@+id/txt_input"
        android:layout_below="@+id/label_input"
        android:layout_alignParentStart="true"
        android:hint="input suhu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelHasil"
        android:id="@+id/label_hasil"
        android:ems="10"
        android:textStyle="normal|bold"
        android:textColor="#000000"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/txt_input"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPilih"
        android:id="@+id/label_pilih"
        android:ems="10"
        android:textStyle="normal|bold"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/txt_hasil"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_pilih"
        android:text="@string/radioGrupPilih"
        android:id="@+id/pilih"
        android:layout_alignParentStart="true" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/konversiCF"
            android:id="@+id/konversi_CF" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/konversiFC"
            android:id="@+id/konversi_FC" />
    </RadioGroup>

    <Button
        android:text="@string/btnProses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pilih"
        android:layout_alignEnd="@+id/txt_hasil"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="19dp"
        android:id="@+id/btn_proses" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/txtHasil"
        android:ems="10"
        android:id="@+id/txt_hasil"
        android:focusable="false"
        android:layout_below="@+id/label_hasil"
        android:layout_alignParentStart="true" />

</RelativeLayout>
